prevent body scrolling on mobile devices

--- a/src/PaymentForm/PaymentForm.scss
+++ b/src/PaymentForm/PaymentForm.scss
@@ -187,7 +187,7 @@
 
     .wpwl-group-expiry,
     .wpwl-group-cvv {
-      max-width: 50%;
+      width: 50%;
     }
 
     input.wpwl-control,
@@ -202,6 +202,7 @@
       box-sizing: border-box;
       outline: none;
       height: 42px;
+      line-height: 22px;
       padding: 0 16px;
       font-size: 16px;
       background: #ffffff;
